--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "dayjs": "^1.11.13",
     "lozad": "^1.16.0",
     "motion": "^10.18.0",
-    "pagefind": "^1.3.0"
+    "pagefind": "^1.3.0",
+    "rehype-katex": "^7.0.1",
+    "remark-math": "^6.0.0"
   },
   "devDependencies": {
     "@astrojs/rss": "^4.0.12",
